docs/apache-airflow-providers-google/14.1.0/_sources/_api/airflow/providers/google/cloud/operators/cloud_composer/index.rst.txt
airflow.providers.google.cloud.operators.cloud_composer
=======================================================

.. py:module:: airflow.providers.google.cloud.operators.cloud_composer


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.operators.cloud_composer.CLOUD_COMPOSER_BASE_LINK
   airflow.providers.google.cloud.operators.cloud_composer.CLOUD_COMPOSER_DETAILS_LINK
   airflow.providers.google.cloud.operators.cloud_composer.CLOUD_COMPOSER_ENVIRONMENTS_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerEnvironmentLink
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerEnvironmentsLink
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerCreateEnvironmentOperator
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerDeleteEnvironmentOperator
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerGetEnvironmentOperator
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerListEnvironmentsOperator
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerUpdateEnvironmentOperator
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerListImageVersionsOperator
   airflow.providers.google.cloud.operators.cloud_composer.CloudComposerRunAirflowCLICommandOperator


Module Contents
---------------

.. py:data:: CLOUD_COMPOSER_BASE_LINK
   :value: 'https://console.cloud.google.com/composer/environments'


.. py:data:: CLOUD_COMPOSER_DETAILS_LINK
   :value: 'https://console.cloud.google.com/composer/environments/detail/{region}/{environment_id}/monitori...


.. py:data:: CLOUD_COMPOSER_ENVIRONMENTS_LINK
   :value: 'https://console.cloud.google.com/composer/environments?project={project_id}'


.. py:class:: CloudComposerEnvironmentLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Composer Environment Link.


   .. py:attribute:: name
      :value: 'Cloud Composer Environment'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'composer_conf'



   .. py:attribute:: format_str
      :value: 'https://console.cloud.google.com/composer/environments/detail/{region}/{environment_id}/monitori...



   .. py:method:: persist(operator_instance, context)
      :staticmethod:



.. py:class:: CloudComposerEnvironmentsLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Composer Environment Link.


   .. py:attribute:: name
      :value: 'Cloud Composer Environment List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'composer_conf'



   .. py:attribute:: format_str
      :value: 'https://console.cloud.google.com/composer/environments?project={project_id}'



   .. py:method:: persist(operator_instance, context)
      :staticmethod:



.. py:class:: CloudComposerCreateEnvironmentOperator(*, project_id, region, environment_id, environment, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, retry = DEFAULT, timeout = None, metadata = (), deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), pooling_period_seconds = 30, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Create a new environment.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
   :param environment:  The environment to create.
   :param gcp_conn_id:
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param deferrable: Run operator in the deferrable mode
   :param pooling_period_seconds: Optional: Control the rate of the poll for the result of deferrable run.
       By default, the trigger will poll every 30 seconds.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'environment', 'impersonation_chain')



   .. py:attribute:: operator_extra_links


   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: environment


   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: pooling_period_seconds
      :value: 30



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


.. py:class:: CloudComposerDeleteEnvironmentOperator(*, project_id, region, environment_id, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), pooling_period_seconds = 30, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Delete an environment.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param gcp_conn_id:
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run operator in the deferrable mode
   :param pooling_period_seconds: Optional: Control the rate of the poll for the result of deferrable run.
       By default, the trigger will poll every 30 seconds.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'impersonation_chain')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: pooling_period_seconds
      :value: 30



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


.. py:class:: CloudComposerGetEnvironmentOperator(*, project_id, region, environment_id, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Get an existing environment.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param gcp_conn_id:
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'impersonation_chain')



   .. py:attribute:: operator_extra_links


   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudComposerListEnvironmentsOperator(*, project_id, region, page_size = None, page_token = None, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   List environments.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param page_size: The maximum number of environments to return.
   :param page_token: The next_page_token value returned from a previous List
       request, if any.
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param gcp_conn_id:
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'impersonation_chain')



   .. py:attribute:: operator_extra_links


   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: page_size
      :value: None



   .. py:attribute:: page_token
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudComposerUpdateEnvironmentOperator(*, project_id, region, environment_id, environment, update_mask, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), pooling_period_seconds = 30, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Update an environment.

   :param project_id: Required. The ID of the Google Cloud project that the service belongs to.
   :param region: Required. The ID of the Google Cloud region that the service belongs to.
   :param environment_id: Required. The ID of the Google Cloud environment that the service belongs to.
   :param environment:  A patch environment. Fields specified by the ``updateMask`` will be copied from the
       patch environment into the environment under update.
   :param update_mask:  Required. A comma-separated list of paths, relative to ``Environment``, of fields to
       update. If a dict is provided, it must be of the same form as the protobuf message
       :class:`~google.protobuf.field_mask_pb2.FieldMask`
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param gcp_conn_id:
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run operator in the deferrable mode
   :param pooling_period_seconds: Optional: Control the rate of the poll for the result of deferrable run.
       By default, the trigger will poll every 30 seconds.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'impersonation_chain')



   .. py:attribute:: operator_extra_links


   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: environment


   .. py:attribute:: update_mask


   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: pooling_period_seconds
      :value: 30



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


.. py:class:: CloudComposerListImageVersionsOperator(*, project_id, region, page_size = None, page_token = None, include_past_releases = False, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id = 'google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   List ImageVersions for provided location.

   :param request:  The request object. List ImageVersions in a project and location.
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param gcp_conn_id:
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'impersonation_chain')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: page_size
      :value: None



   .. py:attribute:: page_token
      :value: None



   .. py:attribute:: include_past_releases
      :value: False



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: CloudComposerRunAirflowCLICommandOperator(*, project_id, region, environment_id, command, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id = 'google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), poll_interval = 10, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Run Airflow command for provided Composer environment.

   :param project_id: The ID of the Google Cloud project that the service belongs to.
   :param region: The ID of the Google Cloud region that the service belongs to.
   :param environment_id: The ID of the Google Cloud environment that the service belongs to.
   :param command: Airflow command.
   :param retry: Designation of what errors, if any, should be retried.
   :param timeout: The timeout for this request.
   :param metadata: Strings which should be sent along with the request as metadata.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud Platform.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run operator in the deferrable mode
   :param poll_interval: Optional: Control the rate of the poll for the result of deferrable run.
       By default, the trigger will poll every 10 seconds.


   .. py:attribute:: template_fields
      :value: ('project_id', 'region', 'environment_id', 'command', 'impersonation_chain')



   .. py:attribute:: project_id


   .. py:attribute:: region


   .. py:attribute:: environment_id


   .. py:attribute:: command


   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:attribute:: poll_interval
      :value: 10



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_complete(context, event)


